--- a/pages/myCompany/index.wxml
+++ b/pages/myCompany/index.wxml
@@ -8,18 +8,22 @@
 		</view>
 	</view> -->
 	<view class="hasCompImg">
-		
+		<image src="../../images/joinImg.png"></image>
 	</view>
 </view>
 <view class="navTab">
 	<view class="innerTab padd">
-		<view class="tabNavItem active"><view class="lineView"></view>已有公司</view>
-		<view class="tabNavItem"><view class="lineView"></view>待审核</view>
-		<view class="tabNavItem"><view class="lineView"></view>未通过</view>
+		<view
+			wx:for="{{tabNav}}"
+			wx:key="index"
+			data-index="{{index}}"
+			class="tabNavItem {{currentTab == index ? 'active' : ''}}"
+			bindtap="getCurrentTabCon"
+		><view class="lineView"></view>{{item}}</view>
 	</view>
 </view>
 <view class="compList padd">
-	<view class="listItem">
+	<!-- <view class="listItem">
 		<view class="itemTit">
 			<view class="titCon ellip">濮阳亮宇实业有限公司</view>
 		</view>
@@ -28,16 +32,35 @@
 	<view class="listItem">
 		<view class="itemTit waitCheck">
 			<view class="titCon ellip">濮阳亮宇实业有限公司</view>
-			<view class="waitCheckNum">2条申请待处理</view>
 		</view>
 		<view class="applyDate">申请日期：2019-02-10 14:30</view>
-	</view>
-	<view class="listItem">
-		<view class="itemTit waitCheck">
-			<view class="titCon ellip">濮阳亮宇实濮阳亮宇实业有限公司濮阳亮宇实业有限公司业有限公司</view>
-			<view class="waitCheckNum">2条申请待处理</view>
+		<view></view>
+	</view> -->
+	<view class="listItem"
+		wx:for="{{compList}}"
+		wx:key="index"
+		data-id="{{item.cpyId}}"
+	>
+		<view class="itemTit waitCheck"> 
+			<view class="titCon {{isPassFlag ? '' : 'specWid'}} ellip">{{item.cpyName}}</view>
 		</view>
 		<view class="applyDate">申请日期：2019-02-10 14:30</view>
+		<view class="btnWrap">
+			<block wx:if="{{isPassFlag}}">
+				<view class="viewDet">
+					<i class="iconfont icon-viewDet"></i>
+				</view>
+				<view class="viewDet">
+					<i class="iconfont icon-daichuli"></i>
+					<view class="waitNum">{{item.dealNum}}</view>
+				</view>
+			</block>
+			<block wx:else>
+				<view class="viewDet specWid">
+					<i class="iconfont icon-bianji"></i>
+				</view>
+			</block>
+		</view>
 	</view>
 </view>
-<view class="applyBtn">申请创建公司</view>
+<view class="applyBtn" bindtap="createNewComp">申请创建公司<isAuthor bind:flagEvent="pubPotTrade"></isAuthor></view>
