--- a/pages/basic/addDriverYyy/index.wxss
+++ b/pages/basic/addDriverYyy/index.wxss
@@ -24,6 +24,7 @@
 	height: 90rpx;
 	line-height: 90rpx;
 	border-bottom: 1rpx solid #e8e8e8;
+	margin-bottom: 30rpx;
 }
 .driverMod .driverModTit{
 	width: 160rpx;
@@ -43,11 +44,6 @@
 	font-size: 28rpx;
 	color: #121212;
 }
-
-
-
-
-
 .saveBtn{
 	width: 500rpx;
 	height: 80rpx;
@@ -57,7 +53,7 @@
 	text-align: center;
 	font-size: 31rpx;
 	padding: 0;
-	margin-top: 40rpx;
+	margin-top:200rpx;
 	font-weight: normal;
 	position: relative;
 	border-radius: 6rpx;
