--- a/pages/myCompany/companyDet.wxss
+++ b/pages/myCompany/companyDet.wxss
@@ -1,59 +1,219 @@
 page{
-	background: #efefef;
-}
-.waitDeal{
 	background: #fff;
 }
-.dealTit{
+.compDetWrap{
+	background: #fff;
+}
+.compDetTabNav{
+	height: 90rpx;
+	line-height: 90rpx;
+	border-bottom: 1rpx solid #e8e8e8;
+	color: #121212;
+}
+.compDetTabNav .tabItem{
+	width: 20%;
+	height: 100%;
+	float: left;
+	text-align: center;
+	font-size: 26rpx;
+}
+.compDetTabNav .tabItem.active{
+	color: #3c7de9;
+	font-weight: 620;
+}
+.infoItem{
+	height: 70rpx;
+	line-height: 70rpx;
+}
+.iconView{
+	width: 15%;
+	height: 100%;
+	float: left;
+	text-align: center;
+}
+.iconView i{
+	color: #81b0ff;
+}
+.infoCon{
+	width: 85%;
+	height: 100%;
+ 	float: left;
+	font-size: 26rpx;
+	color: #121212;
+}
+.comTabCon{
+	display: none;
+}
+.staffItem{
+	padding: 20rpx 0;
+}
+.headImgView{
+	width: 80rpx;
+	height: 80rpx;
+	background: pink;
+	float: left;
+	border-radius: 50%;
+}
+.headImgView image{
+	width: 100%;
+	height: 100%;
+	border-radius: 50%;
+	overflow: hidden;
+}
+.staffInfo{
+	width: 86%;
+	height: 80rpx;
+	float: left;
+	margin-left: 15rpx;
+	position: relative;
+}
+.staffName{
+	height: 50rpx;
+	line-height: 50rpx;
+	font-size: 26rpx;
+	color: #606060;
+}
+.staffName text:last-child{
+	margin-left: 15rpx;
+}
+.applyDate{
+	height: 30rpx;
+	line-height: 30rpx;
+	font-size: 22rpx;
+	color: #a9a9a9;
+}
+.delBtn{
+	width: 20%;
+	height: 100%;
+	line-height: 80rpx;
+	position: absolute;
+	right: 0;
+	top: 0;
+	text-align: right;
+}
+.delBtn i{
+	font-size: 36rpx;
+	color: #a9a9a9;
+}
+.confirmWrap{
+	width: 600rpx;
+	height: 280rpx;
+	position: fixed;
+	left: 50%;
+	margin-left: -300rpx;
+	top: 50%;
+	margin-top: -140rpx;
+	background: #fff;
+	border-radius: 8rpx;
+	z-index: 1001;
+}
+.confirmCon{
+	padding: 30rpx;
+	font-size: 30rpx;
+	color: #121212;
+	text-align: center;
+	line-height: 100rpx;
+}
+.btnWrap .confirmBtn{
+	width: 170rpx;
+	height: 80rpx;
+	line-height: 80rpx;
+	text-align: center;
+	float: left;
+}
+.btnWrap .confirmBtn.sureBtn{
+	background: #3c7de9;
+	color: #fff;
+	margin:0 50rpx 0 100rpx;
+}
+.btnWrap .confirmBtn.cancelBtn{
+	background: #e8e8e8;
+	color: #606060;
+}
+.yyyItem{
+	margin-bottom: 20rpx;
+	border-bottom: 1rpx solid #e8e8e8;
+	padding-bottom: 20rpx;
+	position: relative;
+}
+.edit{
+	width: 20%;
+	height: 100%;
+	position: absolute;
+	right: 0;
+	top: 0;
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+}
+.edit i{
+	font-size: 32rpx;
+	color: #a9a9a9;
+}
+.yyyItem:first-child{
+	padding-top: 20rpx;
+}
+.yyyItem:last-child{
+}
+.yyyItem .nameItem,
+.yyyItem .telItem{
+	height: 50rpx;
+	line-height: 50rpx;
+	font-size: 26rpx;
+}
+.yyyItem text.yyyTit{
+	color: #606060;
+}
+.yyyItem text.yyyName{
+	color: #121212;
+}
+.yyyItem .yyyTit{
+	margin-right: 15rpx;
+}
+.cpList{
+	width: 332rpx;
+	height: 80rpx;
+	line-height: 80rpx;
+	float: left;
+	background: #3c7de9;
+	font-size: 28rpx;
+	color: #fff;
+	border-radius: 8rpx;
+	margin:30rpx 26rpx 0 0;
+	display: flex;
+	justify-content: space-between;
+}
+.cpList text{
+	margin-left: 30rpx;
+}
+.cpList i{
+	margin-right: 30rpx;
+	font-size: 28rpx;
+}
+.cpList:nth-of-type(2n){
+	margin-right: 0;
+}
+.noDataAdd{
 	height: 60rpx;
 	line-height: 60rpx;
 	font-size: 30rpx;
-	color: #121212;
+	color: #3c7de9;
+	display: flex;
+	justify-content: center;
+	margin-top:100rpx ;
 }
-.dealListItem{
-	padding: 20rpx 0;
-}
-.dealListItem .imageView{
-	width: 90rpx;
-	height: 90rpx;
-	background: pink;
-	border-radius: 50%;
+.noDataAdd i,
+.noDataAdd text{
 	float: left;
+	font-weight: 620;
 }
-.dealListCon{
-	float: left;
-	margin-left: 15rpx;
-	width: 85%;
-	min-height: 90rpx;
+.noDataAdd i{
+	font-size: 32rpx;
+	margin-right: 10rpx;
+	margin-top: 2rpx;
 }
-.listConTit{
-	height: 60rpx;
-	line-height: 60rpx;
-	font-size: 28rpx;
-	color: #121212;
-}
-.applyDate{
-	font-size: 24rpx;
-	color: #a9a9a9;
-}
-.dealBtnWrap{
-	width: 100%;
-	float: left;
-	height: 60rpx;
-}
-.dealBtn{
-	width: 100rpx;
-	height: 60rpx;
-	line-height: 60rpx;
-	border:1rpx solid #3c7de9;
-	float: right;
+.tipInfo{
 	text-align: center;
 	font-size: 26rpx;
-	color: #3c7de9;
-	border-radius: 8rpx;
-}
-.dealBtn:first-child{
-	background: #3c7de9;
-	color: #fff;
-	margin-left: 40rpx;
+	color: #a9a9a9;
 }
