--- a/pages/driverZpDet/index.wxml
+++ b/pages/driverZpDet/index.wxml
@@ -42,10 +42,12 @@
 			<view class="lxrNameTel">{{zpDetData.lxName}}</view>
 			<view class="rqDevName ellip">{{zpDetData.lxTel}}</view>
 		</view>
-		<view class="phoneCall" data-phone="{{zpDetData.lxTel}}" bindtap="getPhoneCall">
-			<i class="iconfont icon-tel"></i>
-		</view>
-	</view>
+		<block wx:if="{{currJump == 'comeByZpList'}}">
+			<view class="phoneCall" data-phone="{{zpDetData.lxTel}}" bindtap="getPhoneCall">
+				<i class="iconfont icon-tel"></i>
+			</view>
+		</block>
+  	</view>
 </view>
 <view class="compAdd padd">
 	<view class="pubTit">公司地址</view>
@@ -54,27 +56,32 @@
 		<view class="ellip">{{zpDetData.address}}</view>
 	</view>
 </view>
-<view class="botFun">
-	<block wx:if="{{ufId != ''}}">
-		<view class="focusView">
-			<view class="iconView">
-				<i class="iconfont icon-guanzhu1"></i>
+<block wx:if="{{currJump == 'comeByZpList'}}">
+	<view class="botFun">
+		<block wx:if="{{ufId != ''}}">
+			<view class="focusView">
+				<view class="iconView">
+					<i class="iconfont icon-guanzhu1"></i>
+				</view>
+				<view class="iconTxt">已关注</view>
+				<isAuthor bind:flagEvent="cancelFocus"></isAuthor>
 			</view>
-			<view class="iconTxt">已关注</view>
-			<isAuthor bind:flagEvent="cancelFocus"></isAuthor>
-		</view>
-	</block>
-	<block wx:else>
-		<view class="focusView">
-			<view class="iconView">
-				<i class="iconfont icon-guanzhu"></i>
+		</block>
+		<block wx:else>
+			<view class="focusView">
+				<view class="iconView">
+					<i class="iconfont icon-guanzhu"></i>
+				</view>
+				<view class="iconTxt">关注</view>
+				<isAuthor bind:flagEvent="getFocus"></isAuthor>
 			</view>
-			<view class="iconTxt">关注</view>
-			<isAuthor bind:flagEvent="getFocus"></isAuthor>
-		</view>
-	</block>
-	<view class="buyGasBtn" data-phone="{{zpDetData.lxTel}}" bindtap="getPhoneCall">电话联系</view>
-</view>
+		</block>
+		<view class="buyGasBtn" data-phone="{{zpDetData.lxTel}}" bindtap="getPhoneCall">电话联系</view>
+	</view>
+</block>
+<block wx:elif="{{currJump == 'mineZpPage'}}">
+	11111
+</block>
 <view class="noDataList" hidden="{{isHasDataFlag}}">
 	<image mode="widthFix" src="../../images/noData.png"></image>
 	<view class="noDataTxt">暂无记录</view>
